<resources>
    <!-- Strings related to apps -->
    <string name="app_name">Secure Android Template</string>
    <string name="app_description">A Native Android Application that demonstrates Secure Mobile Development Practises.</string>

    <!-- Strings related to Navigation -->
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Settings</string>

    <!-- Strings related to Home -->
    <string name="fragment_title_home">Home</string>

    <!-- Strings related to Authentication -->
    <string name="fragment_title_authenticate">Authenticate</string>
    <string name="prompt_username">Username</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_incorrect_credentials">Incorrect Credentials</string>
    <string name="auth_description">OpenID Connect Authentication via Keycloak.</string>
    <string name="error_field_required">This field is required</string>
    <string name="auth_user_details_view">User Profile Details View</string>

    <!-- Strings related to Storage -->
    <string name="fragment_title_storage">Storage</string>

    <!-- Strings related to Network -->
    <string name="fragment_title_network">Network</string>

    <!-- Strings related to Device -->
    <string name="fragment_title_device">Device</string>

    <!-- Strings related to Cryptography -->
    <string name="fragment_title_cryptography">Cryptography</string>

    <!-- Strings related to Configuration -->
    <string name="fragment_title_configuration">Configuration</string>

</resources>
